--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -4,7 +4,7 @@ version: 2.7.0.0
 website: http://www.spigotmc.org/resources/residence-reloaded-1-8.2697/
 description: Cuboid Residence Plugin
 authors: [bekvon,nate302,t00thpick1]
-softdepend: [Vault,Essentials,RealPlugin,BOSEconomy,iConomy,bPermissions,PermissionsBukkit,Permissions,WorldEdit,WorldGuard,My Worlds]
+softdepend: [Vault,Essentials,RealPlugin,BOSEconomy,iConomy,bPermissions,PermissionsBukkit,Permissions,WorldEdit,WorldGuard,CrackShot,My Worlds]
 contributors: [lemon42,smbarbour,inorixu,Shayana_fr]
 commands:
   res:
@@ -46,4 +46,7 @@ permissions:
     default: op
   residence.versioncheck:
     description: Notice to new version after connect
+    default: op
+  residence.nofly.bypass:
+    description: Bypasses nofly flag in residence
     default: op
